src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
        <label>DDP Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch__c</fullName>
        <label>Current Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Current_Branch_s_System_Date__c</fullName>
        <label>Current Branch&apos;s System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Current_System_Date__c</fullName>
        <label>Current System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Default_Branch__c</fullName>
        <label>Default Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Is_Teller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Teller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Teller_GL__c</fullName>
        <label>Teller GL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>loan__Teller_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Is_Teller__c &amp;&amp; ISBLANK( loan__Teller_GL__c )</errorConditionFormula>
        <errorMessage>GL must be entered for a teller.</errorMessage>
    </validationRules>
</CustomObject>